CA-294: Fix hero title padding on mobile

--- a/src/sass/layout/_team-member.scss
+++ b/src/sass/layout/_team-member.scss
@@ -1,10 +1,16 @@
 .team-member {
   &__hero {
     text-align: center;
+    margin-bottom: $section-margin;
     @media all and (max-width: $small-screen) {
       transform: scaleY(-1);
     }
     .hero {
+      &__title {
+        @media all and (max-width: $small-screen) {
+          margin-bottom: 0;
+        }
+      }
       &__image {
         padding-top: $site-margins;
         margin-bottom: -($spacing-medium);
